--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -14,3 +14,11 @@ updates:
     commit-message:
       prefix: "fix"
       include: "scope"
+  - package-ecosystem: gomod
+    directory: "/"
+    schedule:
+      interval: monthly
+    versioning-strategy: increase-if-necessary
+    commit-message:
+      prefix: "fix"
+      include: "scope"
